fix(Table): Don't truncate overflow Tabulator cell content (#1521)

--- a/src/assets/wise5/components/table/tabulator-table/tabulator-table.component.scss
+++ b/src/assets/wise5/components/table/tabulator-table/tabulator-table.component.scss
@@ -18,6 +18,7 @@
     background-color: #ffffff;
     min-height: 44px; // temporary hack to fix height for some rows with empty cell values; TODO: investigate and fix
     border-bottom: 1px solid #dddddd;
+    white-space: normal;
     
     &.tabulator-frozen {
       background-color: #ffffff;
